[tool.poetry]
name = "yuheng-plugin-registry"
version = "1.0.0"
description = ""
authors = ["快乐的老鼠宝宝 <laoshubaby@protonmail.com>"]
license = "CC-0"
readme = "README.md"
repository = "https://github.com/geo-yuheng/yuheng-plugin-registry"
classifiers = [
    "Operating System :: OS Independent",
]
packages = [{ include = "yuheng_plugin", from = "src" }]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
